Compile Kotlin, Scala and Groovy alongside Java
Implements specs/JVM_LANGUAGES.md (milestones L0 to L4). A [kotlin],
[scala] or [groovy] table turns the language on and pins its compiler.
The compiler is resolved from Maven Central as a graph of its own, never
mediated against the project's, pinned in jrs.lock's new [[tool]] blocks,
and run on the project's JDK as `java @argfile`. The language's runtime
library is an implied dependency at the compiler's version, declared
last, so it wins nearest-wins; a declaration in either table replaces it.

- compile.rs becomes compile/: a unit is ordered steps sharing one output
  directory and fingerprint. Kotlin and Scala compile first and read the
  Java sources for their symbols, then javac; Groovy compiles both in
  joint mode. Per-language flags, compilers and runtime libraries are
  plain data on `enum Language` in compile/lang.rs.
- Sources are scanned across every root for every extension. A source in
  a language that is off, or a unit with two languages besides Java, is a
  manifest error.
- jrs.lock stays version 1 byte for byte without tools, and becomes
  version 2 with them; manifest-checksum gains a line per language.
- The test launcher follows the resolved junit-platform-engine, a
  transitive junit:junit gets the Vintage launcher, and with non-Java
  tests `*Spec` and `*Suite` classes run too. The graph's own copies of
  the launcher's parts are kept off the test JVM's classpath: the one
  kotlin-test-junit5 brings broke every run.
- jrs init --lang, jrs tree --tool, compiler versions in jrs outdated,
  the Scala suffix warning in jrs add, the MainKt hint in jrs run, and
  the migrate rows for the Kotlin, Scala and Groovy Maven and Gradle
  plugins. verify, cache prune and watch mode cover the new pieces.
- Fat jars merge Groovy extension-module descriptors and drop the
  dependencies' module-info classes.

What the L0 spike found is written back into JVM_LANGUAGES.md §15: the
compilers' own @file readers dis